# adventofcode-2022

./: LICENSE  README.md
adventofcode/: LICENSE.txt  README.md  pyproject.toml  setup.py
adventofcode/adventofcode/: __init__.py  helpers.py
adventofcode/adventofcode.egg-info/: PKG-INFO  SOURCES.txt
adventofcode/helper.egg-info/: PKG-INFO  SOURCES.txt
day1/: README.md  elf_calories.py
day10/: README.md  elf_assembly.py
day11/: README.md  monkey_business.py
day12/: README.md  hill_climb.py
day13/: README.md  distress-call.py  helpers.py  test.py
day14/: README.md  helpers.py  waterfall-sand.py
day15/: README.md  senors_n_beacons.py
day16/: README.md  helpers.py  notes.txt  under_pressure.py
day17/: README.md  helpers.py  rock_tetris.py
day18/: README.md  helpers.py  lava_cubes.py
day19/: README.md  helpers.py  robot_diggers.py
day2/: README.md  elf_rps.py
day20/: README.md  encrypted_grove.py
day3/: README.md  elf_rucksack.py  input-sample.txt  input-test.txt
day4/: README.md  elf_cleanup.py  input-test.txt
day5/: README.md  elf_stacks.py  input-test.txt
day6/: README.md  elf_device.py
day7/: README.md  elf-fs.py  input-josh.txt  input-test.txt  test.txt
day8/: README.md  elf_treehouse.py  scratch.txt
day9/: README.md  elf_rope.py
helpers/: helpers.py
